<resources>
    <string name="app_name">Games</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="updated">Updated :</string>
    <string name="screen_shots">Screen Shots</string>
    <string name="tags">Tags</string>
    <string name="esrb">ESRB</string>
    <string name="rating">Rating :</string>
    <string name="screenshots">Screen Shots</string>
    <string name="about">About</string>
    <string name="recommendedrequirments">Recommended</string>
    <string name="requirments">Requirments</string>
    <string name="platforms">Platforms</string>
    <string name="stores">Stores</string>
    <string name="publishers">Publishers</string>
    <string name="developers">Developers</string>
    <string name="search_for_games">Search For Games</string>
    <string name="desc">DESC</string>
</resources>